--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 if (EMSCRIPTEN)
 else()
     add_subdirectory(main)
+    add_subdirectory(main-tui)
     add_subdirectory(quantize)
     add_subdirectory(quantize-stats)
     add_subdirectory(perplexity)
